--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="%app.lang%">
+<html lang="%app.lang%" class="h-full">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
@@ -8,8 +8,13 @@
 	</head>
 	<body
 		data-sveltekit-preload-data="hover"
-		class="%app.theme.primary% %app.theme.neutral% %app.theme.dark%"
+		class="%app.theme.primary% %app.theme.neutral% %app.theme.dark% h-full"
 	>
-		<div id="app">%sveltekit.body%</div>
+		<div
+			id="app"
+			class="flex h-full flex-col bg-neutral-50 text-neutral-900 dark:bg-neutral-900 dark:text-neutral-50 dark:[color-scheme:only_dark]"
+		>
+			%sveltekit.body%
+		</div>
 	</body>
 </html>
